--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs": "^0.0.1-security",
     "googleapis": "^128.0.0",
     "next": "13.5.6",
+    "next-auth": "^4.24.3",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.4"
