--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googleapis/drive": "^8.4.0",
     "axios": "^1.5.1",
     "encoding": "^0.1.13",
     "fs": "^0.0.1-security",
-    "googleapis": "^128.0.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
     "react": "^18",
@@ -20,6 +21,7 @@
     "sass": "^1.69.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
