--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "sass": "^1.69.5",
     "streamifier": "^0.1.1",
     "zustand": "^4.4.4"
