--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "sass": "^1.69.5",
+    "stream-to-blob": "^2.0.1",
     "streamifier": "^0.1.1",
     "zustand": "^4.4.4"
   },
