--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@googleapis/drive": "^8.4.0",
     "axios": "^1.5.1",
     "encoding": "^0.1.13",
+    "filesize": "^10.1.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "next": "13.5.6",
