--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@googleapis/drive": "^8.4.0",
     "axios": "^1.5.1",
+    "dotenv": "^16.4.7",
     "encoding": "^0.1.13",
     "filesize": "^10.1.0",
     "fs": "^0.0.1-security",
