--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googleapis/drive": "^8.4.0",
+    "@types/react-mic": "^12.4.6",
     "axios": "^1.5.1",
     "dotenv": "^16.4.7",
     "encoding": "^0.1.13",
@@ -24,6 +25,7 @@
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-mic": "^12.4.6",
     "sass": "^1.69.5",
     "stream-to-blob": "^2.0.1",
     "streamifier": "^0.1.1",
