--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
+  "engines": {
+  "node": ">=20.0.0"
+},
   "name": "sweet-dreams",
-  "version": "0.1.0",
+  "version": "2.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
