--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "react": "^18",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18",
+    "react-h5-audio-player": "^3.10.0-rc.1",
     "react-icons": "^4.11.0",
     "react-mic": "^12.4.6",
+    "react-modern-audio-player": "^1.4.0-rc.2",
     "sass": "^1.69.5",
     "stream-to-blob": "^2.0.1",
     "streamifier": "^0.1.1",
