--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^4.11.0",
     "react-mic": "^12.4.6",
     "react-modern-audio-player": "^1.4.0-rc.2",
+    "react-switch": "^7.1.0",
     "sass": "^1.69.5",
     "stream-to-blob": "^2.0.1",
     "streamifier": "^0.1.1",
