--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql2": "^3.6.5",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
+    "nosleep.js": "^0.12.0",
     "pcloud-sdk-js": "^2.0.0",
     "react": "^18",
     "react-audio-voice-recorder": "^2.2.0",
