--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "mysql2": "^3.6.5",
     "next": "13.5.6",
     "next-auth": "^4.24.3",
-    "nosleep.js": "^0.12.0",
     "pcloud-sdk-js": "^2.0.0",
     "react": "^18",
     "react-audio-voice-recorder": "^2.2.0",
@@ -36,6 +35,7 @@
     "react-icons": "^4.11.0",
     "react-mic": "^12.4.6",
     "react-modern-audio-player": "^1.4.0-rc.2",
+    "react-screen-wake-lock": "^3.1.1",
     "react-switch": "^7.1.0",
     "sass": "^1.69.5",
     "stream-to-blob": "^2.0.1",
