--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@googleapis/drive": "^8.4.0",
     "@neondatabase/serverless": "^1.0.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-mic": "^12.4.6",
     "axios": "^1.5.1",
     "dotenv": "^16.4.7",
@@ -23,6 +24,7 @@
     "fs": "^0.0.1-security",
     "hex-to-css-filter": "^6.0.0",
     "hex-to-rgb": "^1.0.1",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
     "next": "13.5.6",
