--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sass": "^1.69.5",
     "stream-to-blob": "^2.0.1",
     "streamifier": "^0.1.1",
+    "uuid": "^11.1.0",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
