--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@biomejs/biome": "^2.0.6",
     "@emotion/react": "^11.14.0",
     "@googleapis/drive": "^8.4.0",
     "@neondatabase/serverless": "^1.0.0",
